--- a/index.html
+++ b/index.html
@@ -1,19 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website design</title>
+    <title>Website Design</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Open+Sans:wght@700;800&family=Work+Sans:wght@800&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="styles.css/design.css">
 </head>
+
 <body>
     <header>
-        <h1>Hello Developer</h1>
+        <section class="banner-section">
+            <div class="banner-div">
+                <div class="banner-text">
+                    <h4 class="happy">Happy New Year</h4>
+                    <h1 class="new">New Year Party Celebration</h1>
+                </div>
+            </div>
+        </section>
     </header>
     <main>
-
+        <section class="offer">
+            <div class="offer-title">
+                <h1>65% OFF</h1>
+            </div>
+            <div class="offer-categorie">
+                <h4 class="first-categorie">OUR HOLIDAY DEALS ARE BETTER</h4>
+                <h1 class="second-categorie">ALL CATEGORIES</h1>
+            </div>
+            <div class="offer-image">
+                <img src="/resources/New Year Photo.png" alt="">
+            </div>
+        </section>
+        <section class="party">
+            <div class="welcome">
+                <div class="party-title">
+                    <h1 class="party-header">Welcome to <br>midnight party</h1>
+                    <p class="party-details">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed
+                    sodales risus ut pellentesque vel euismod. </p>
+                <div class="join">
+                    <h3 >Join Now</h3>
+                </div>
+                </div>
+               
+                <div class="party-image">
+                    <img src="/resources/Group 70.png" alt="">
+                </div>
+            </div>
+        </section>
+        <section class="party-address">
+            <div class="address">
+                <div class="address-first">
+                    <h2 class="place"><span>Place:</span> New Park Hotel</h2>
+                    <h2 class="date"><span>Date: </span> 31 December Night 2023</h2>
+                    <h2 class="time"><span>Time: </span> Evening 7.30 pm to 12.30 am</h2>
+                </div>
+                <div class="join-first">
+                    <button class="btn">Join Now</button>
+                </div>
+            </div>
+        </section>
+        <section class="new-offer">
+            <div class="new-offer-title">
+                <div class="n-offer">
+                    <h3 class="h3-new">NEW BEST OFFER</h3>
+                    <h1 class="h1-coming">Coming Soon</h1>
+                    <p class="p-details">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod.</p>
+                </div>
+                <div class="new-offer-image">
+                    <img src="/resources/Ellipse 1.png" alt="">
+                </div>
+                <div>
+                    <h1 class="h1-year">2024</h1>
+                    <p class="dolor">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
+                   <img class="n-image" src="/resources/Group 96.png" alt=""> 
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
     </footer>
 </body>
+
 </html>
