--- a/index.html
+++ b/index.html
@@ -41,13 +41,14 @@
             <div class="welcome">
                 <div class="party-title">
                     <h1 class="party-header">Welcome to <br>midnight party</h1>
-                    <p class="party-details">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed
-                    sodales risus ut pellentesque vel euismod. </p>
-                <div class="join">
-                    <h3 >Join Now</h3>
+                    <p class="party-details">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+                        molestie malesuada. Ipsum sed
+                        sodales risus ut pellentesque vel euismod. </p>
+                    <div class="join">
+                        <h3>Join Now</h3>
+                    </div>
                 </div>
-                </div>
-               
+
                 <div class="party-image">
                     <img src="/resources/Group 70.png" alt="">
                 </div>
@@ -70,7 +71,8 @@
                 <div class="n-offer">
                     <h3 class="h3-new">NEW BEST OFFER</h3>
                     <h1 class="h1-coming">Coming Soon</h1>
-                    <p class="p-details">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod.</p>
+                    <p class="p-details">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie
+                        malesuada. Ipsum sed sodales risus ut pellentesque vel euismod.</p>
                 </div>
                 <div class="new-offer-image">
                     <img src="/resources/Ellipse 1.png" alt="">
@@ -78,7 +80,7 @@
                 <div>
                     <h1 class="h1-year">2024</h1>
                     <p class="dolor">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
-                   <img class="n-image" src="/resources/Group 96.png" alt=""> 
+                    <img class="n-image" src="/resources/Group 96.png" alt="">
                 </div>
             </div>
         </section>
