--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         <section class="banner-section">
             <div class="banner-div">
                 <div class="banner-text">
-                   
+                    <h4 class="happy">Happy New Year</h4>
+                    <h1 class="new">New Year Party Celebration</h1>
                 </div>
             </div>
         </section>
