--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <h1 class="second-categorie">ALL CATEGORIES</h1>
             </div>
             <div class="offer-image">
-                <img src="/resources/New Year Photo.png" alt="">
+                <img src="./pictures/picture23.png" alt="">
             </div>
         </section>
         <section class="party">
@@ -50,7 +50,7 @@
                 </div>
 
                 <div class="party-image">
-                    <img src="/resources/Group 70.png" alt="">
+                    <img src="./pictures/picture9.png" alt="">
                 </div>
             </div>
         </section>
@@ -75,12 +75,12 @@
                         malesuada. Ipsum sed sodales risus ut pellentesque vel euismod.</p>
                 </div>
                 <div class="new-offer-image">
-                    <img src="/resources/Ellipse 1.png" alt="">
+                    <img src="./pictures/picture15.png" alt="">
                 </div>
                 <div>
                     <h1 class="h1-year">2024</h1>
                     <p class="dolor">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
-                    <img class="n-image" src="/resources/Group 96.png" alt="">
+                    <img class="n-image" src="./pictures/picture12.png" alt="">
                 </div>
             </div>
         </section>
