--- a/index.html
+++ b/index.html
@@ -41,9 +41,7 @@
             <div class="welcome">
                 <div class="party-title">
                     <h1 class="party-header">Welcome to <br>midnight party</h1>
-                    <p class="party-details">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
-                        molestie malesuada. Ipsum sed
-                        sodales risus ut pellentesque vel euismod. </p>
+                    <p class="party-details">As you eagerly await the holidays, remember that the true magic lies not only in the presents under the tree but in the love that surrounds you.</p>
                     <div class="join">
                         <h3>Join Now</h3>
                     </div>
@@ -71,18 +69,51 @@
                 <div class="n-offer">
                     <h3 class="h3-new">NEW BEST OFFER</h3>
                     <h1 class="h1-coming">Coming Soon</h1>
-                    <p class="p-details">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie
-                        malesuada. Ipsum sed sodales risus ut pellentesque vel euismod.</p>
+                    <p class="p-details">As you eagerly await the holidays, remember that the true magic lies not only in the presents under the tree but in the love that surrounds you.</p>
                 </div>
                 <div class="new-offer-image">
                     <img src="./pictures/picture15.png" alt="">
                 </div>
                 <div>
                     <h1 class="h1-year">2024</h1>
-                    <p class="dolor">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
+                    <p class="dolor">Welcoming 2024 with hope, joy, and fresh possibilities for everyone.</p>
                     <img class="n-image" src="./pictures/picture12.png" alt="">
                 </div>
             </div>
+        </section>
+        <section class="shoping">
+                <div class="shop-title">
+                    <h3 class="bst">THE BEST GIFTS</h3>
+                    <h1 class="aws">Our Awesome Portfolio</h1>
+                    <p class="aws-title">As you eagerly await the holidays, remember that the true magic lies not only in the presents under the tree but in the love that surrounds you.</p>
+                </div>
+                <div class="shoping-categoire">
+                 <div class="first-shoping">
+                    <img class="gap-first" src="./pictures/bag.png" alt="">
+                    <img class="gap-first" src="./pictures/newbag.png" alt="">
+                    <img class="gap-first" src="./pictures/redshoe.png" alt="">
+                </div>
+                <div class="second-shoping">
+                    <img class="gap-second" src="./pictures/whiteshoe.png" alt="">
+                    <img class="gap-second" src="./pictures/sunglass.png" alt="">
+                    <img class="gap-second" src="./pictures/elements.png" alt="">
+                </div>
+            </div>
+        </section>
+        <section class="email-part">
+            <div class="news-letter">
+            <div>
+                <img class="email-p" src="./pictures/email.png" alt="">
+            </div>
+            <div>
+                <h1 class="sub-p">Subscribe Newsletter</h1>
+                <p class="details-part">Dear Subscriber, thank you for joining our holiday newsletter! Get ready for a season filled with exclusive offers, festive tips, and more</p>
+            </div>
+            <div class="sub-title">
+                <input class="email-input" type="email" placeholder="user@gmail.com">
+                <input class="sub-i" type="submit" value="Subscribe">
+            </div>
+        </div>
         </section>
     </main>
     <footer>
