--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Open+Sans:wght@700;800&family=Work+Sans:wght@800&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Open+Sans:wght@700;800&family=Work+Sans:wght@800&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="styles.css/design.css">
 </head>
@@ -41,7 +41,8 @@
             <div class="welcome">
                 <div class="party-title">
                     <h1 class="party-header">Welcome to <br>midnight party</h1>
-                    <p class="party-details">As you eagerly await the holidays, remember that the true magic lies not only in the presents under the tree but in the love that surrounds you.</p>
+                    <p class="party-details">As you eagerly await the holidays, remember that the true magic lies not
+                        only in the presents under the tree but in the love that surrounds you.</p>
                     <div class="join">
                         <h3>Join Now</h3>
                     </div>
@@ -69,7 +70,8 @@
                 <div class="n-offer">
                     <h3 class="h3-new">NEW BEST OFFER</h3>
                     <h1 class="h1-coming">Coming Soon</h1>
-                    <p class="p-details">As you eagerly await the holidays, remember that the true magic lies not only in the presents under the tree but in the love that surrounds you.</p>
+                    <p class="p-details">As you eagerly await the holidays, remember that the true magic lies not only
+                        in the presents under the tree but in the love that surrounds you.</p>
                 </div>
                 <div class="new-offer-image">
                     <img src="./pictures/picture15.png" alt="">
@@ -82,13 +84,14 @@
             </div>
         </section>
         <section class="shoping">
-                <div class="shop-title">
-                    <h3 class="bst">THE BEST GIFTS</h3>
-                    <h1 class="aws">Our Awesome Portfolio</h1>
-                    <p class="aws-title">As you eagerly await the holidays, remember that the true magic lies not only in the presents under the tree but in the love that surrounds you.</p>
-                </div>
-                <div class="shoping-categoire">
-                 <div class="first-shoping">
+            <div class="shop-title">
+                <h3 class="bst">THE BEST GIFTS</h3>
+                <h1 class="aws">Our Awesome Portfolio</h1>
+                <p class="aws-title">As you eagerly await the holidays, remember that the true magic lies not only in
+                    the presents under the tree but in the love that surrounds you.</p>
+            </div>
+            <div class="shoping-categoire">
+                <div class="first-shoping">
                     <img class="gap-first" src="./pictures/bag.png" alt="">
                     <img class="gap-first" src="./pictures/newbag.png" alt="">
                     <img class="gap-first" src="./pictures/redshoe.png" alt="">
@@ -102,22 +105,49 @@
         </section>
         <section class="email-part">
             <div class="news-letter">
-            <div>
-                <img class="email-p" src="./pictures/email.png" alt="">
+                <div>
+                    <img class="email-p" src="./pictures/email.png" alt="">
+                </div>
+                <div>
+                    <h1 class="sub-p">Subscribe Newsletter</h1>
+                    <p class="details-part">Dear Subscriber, thank you for joining our holiday newsletter! Get ready for
+                        a season filled with exclusive offers, festive tips, and more</p>
+                </div>
+                <div class="sub-title">
+                    <input class="email-input" type="email" placeholder="user@gmail.com">
+                    <input class="sub-i" type="submit" value="Subscribe">
+                </div>
             </div>
-            <div>
-                <h1 class="sub-p">Subscribe Newsletter</h1>
-                <p class="details-part">Dear Subscriber, thank you for joining our holiday newsletter! Get ready for a season filled with exclusive offers, festive tips, and more</p>
-            </div>
-            <div class="sub-title">
-                <input class="email-input" type="email" placeholder="user@gmail.com">
-                <input class="sub-i" type="submit" value="Subscribe">
-            </div>
-        </div>
         </section>
     </main>
     <footer>
+        <section class="end-section">
+            <div class="main-foot">
+                <div class="star-foot">
+                    <div class="first-footer">
+                        <p class="big">44, Big Building Roosevelt Street
+                            Beach Gardens Florida 33410</p>
+                        <div>
+                            <h3 class="number"><img src="./pictures/contact.png" alt="">+00 123 584 124</h3>
+                            <h3 class="domain"><img src="./pictures/web.png" alt="">www.website.com</h3>
+                        </div>
 
+                    </div>
+                    <hr class="first-line">
+                    <div class="midile-footer">
+                        <img class="fb" src="./pictures/fb.png" alt="">
+                        <img class="insta" src="./pictures/instragram.png" alt="">
+                        <img class="twit" src="./pictures/twitter.png" alt="">
+                        <img class="link" src="./pictures/linkedin.png" alt="">
+                    </div>
+                    <hr class="second-line">
+                    <div class="under-footer">
+                        <h4 class="all-right"><small>2017, All Rights Reserved.</small></h4>
+                        <h4 class="un-sub"><small>Unsubscribe</small></h4>
+                    </div>
+                </div>
+            </div>
+        </section>
     </footer>
 </body>
 
