--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@
             </div>
             <div class="shoping-categoire">
                 <div class="first-shoping">
-                    <img class="gap-first" src="./pictures/bag.png" alt="">
-                    <img class="gap-first" src="./pictures/newbag.png" alt="">
-                    <img class="gap-first" src="./pictures/redshoe.png" alt="">
+                    <img  src="./pictures/bag.png" alt="">
+                    <img  src="./pictures/newbag.png" alt="">
+                    <img  src="./pictures/redshoe.png" alt="">
                 </div>
                 <div class="second-shoping">
-                    <img class="gap-second" src="./pictures/whiteshoe.png" alt="">
-                    <img class="gap-second" src="./pictures/sunglass.png" alt="">
-                    <img class="gap-second" src="./pictures/elements.png" alt="">
+                    <img src="./pictures/whiteshoe.png" alt="">
+                    <img src="./pictures/sunglass.png" alt="">
+                    <img src="./pictures/elements.png" alt="">
                 </div>
             </div>
         </section>
@@ -142,7 +142,7 @@
                     </div>
                     <hr class="second-line">
                     <div class="under-footer">
-                        <h4 class="all-right"><small>2017, All Rights Reserved.</small></h4>
+                        <h4 class="all-right"><small>&copy;2017, All Rights Reserved.</small></h4>
                         <h4 class="un-sub"><small>Unsubscribe</small></h4>
                     </div>
                 </div>
