--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@
             </div>
             <div class="shoping-categoire">
                 <div class="first-shoping">
-                    <img src="./pictures/bag.png" alt="">
-                    <img src="./pictures/newbag.png" alt="">
-                    <img src="./pictures/redshoe.png" alt="">
+                    <img class="first-image" src="./pictures/bag.png" alt="">
+                    <img class="first-image" src="./pictures/newbag.png" alt="">
+                    <img class="first-image" src="./pictures/redshoe.png" alt="">
                 </div>
                 <div class="second-shoping">
-                    <img src="./pictures/whiteshoe.png" alt="">
-                    <img src="./pictures/sunglass.png" alt="">
-                    <img src="./pictures/elements.png" alt="">
+                    <img class="second-image" src="./pictures/whiteshoe.png" alt="">
+                    <img class="second-image" src="./pictures/sunglass.png" alt="">
+                    <img class="second-image" src="./pictures/elements.png" alt="">
                 </div>
             </div>
         </section>
