--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Open+Sans:wght@700;800&family=Work+Sans:wght@800&display=swap"
         rel="stylesheet">
+        <link rel="shortcut icon" href="./pictures/webicon.jpg" type="image/x-icon">
     <link rel="stylesheet" href="styles.css/design.css">
 </head>
 
